objects/IntegrationLog__c.object
<CustomObject>
    <fields>
        <fullName>Callout__c</fullName>
        <label>Callout</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCN Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Search Lookup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <label>CustomerId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <label>FormName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message/Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Management</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acxiom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis-Nexis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melissa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Success__c</columns>
        <columns>Type__c</columns>
        <columns>Callout__c</columns>
        <columns>Transaction_Management__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>